--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>Welcome to my eBook Store!</h1>
-    <p>This is a (mostly) decentralized application running on blockchain and IPFS.</p>
+    <p>This is a (mostly) decentralized application that interacts with an Ethereum-based blockchain and IPFS.</p>
     <button type="button" name="connectButton" onclick="connect()">Download content</button>
     <script src="index.js"></script>
 </body>
